--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
       content="Web site created using create-react-app"
     />
    
-    <title>Aviasales</title>
+    <title>aviasales</title>
   </head>
   <body>
     <div id="root"></div>
